<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/facebook1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook_huy" />

    <Button
        android:id="@+id/goTo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/facebook1"
        android:text="@string/go_to_3" />


    <Button
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goTo3"
        android:text="@string/request_code" />

    <Button
        android:id="@+id/random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/code"
        android:text="@string/random_sk" />

    <Button
        android:id="@+id/goTo4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/random"
        android:text="@string/go_to_4" />
</RelativeLayout>

